@startuml
hide circle
hide empty members

class "Server" as sqs

class "AccountManager" as uam{
	AccountList
	CreateAccount(Name, Email)
	Login(LoginInfo)
	Logout(UserGUID)
	GetUserDetails(Name)
	SetUserDetails(UserUpdateInfo)
	}
class "UserAccount" as ua

class "UserUpdateInfo" as uaui

sqs *-- uam : 1

uam *-- ua : 0..*
uam - uaui : <<Argument>>


@enduml